[package]
name = "autd3"
description = "AUTD3 library"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["async"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["gain", "modulation", "stm"]
left_handed = ["autd3-core/left_handed"]
use_meter = ["autd3-core/use_meter"]
async = ["tokio", "autd3-core/async", "autd3-driver/async"]
gain = []
modulation = ["autd3-core/utils"]
stm = []
link-audit = ["autd3-firmware-emulator"]
link-nop = ["autd3-firmware-emulator"]

[dependencies]
autd3-core = { workspace = true, features = ["derive", "gain", "link", "modulation"] }
autd3-driver = { workspace = true }
autd3-firmware-emulator = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"], optional = true }

[dev-dependencies]
autd3 = { path = ".", features = ["link-audit", "link-nop"] }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }
