[package]
name = "autd3"
description = "AUTD3 library"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
use_nalgebra = ["autd3-core/use_nalgebra"]
default = ["use_nalgebra", "parallel", "gain", "modulation", "stm"]
left_handed = ["autd3-core/left_handed"]
use_meter = ["autd3-core/use_meter"]
gain = ["autd3-core/gain", "autd3-core/derive"]
modulation = ["autd3-core/modulation", "autd3-core/derive", "autd3-core/utils"]
stm = []
link-audit = ["autd3-core/link", "autd3-firmware-emulator"]
link-nop = ["autd3-core/link", "autd3-firmware-emulator"]
parallel = ["autd3-driver/parallel", "autd3-firmware-emulator?/parallel"]

[dependencies]
autd3-core = { workspace = true }
autd3-driver = { workspace = true }
autd3-firmware-emulator = { workspace = true, optional = true }

[dev-dependencies]
autd3 = { path = ".", features = ["link-audit", "link-nop"] }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
