[package]
name = "autd3-examples"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
nop = ["autd3/link-nop"]
twincat = ["autd3-link-twincat/local"]
ethercrab = ["autd3-link-ethercrab", "tracing", "tracing-subscriber"]
remote = ["autd3-link-remote", "tracing", "tracing-subscriber"]
remote_twincat = ["autd3-link-twincat/remote"]
all = ["twincat", "ethercrab", "remote", "remote_twincat", "simulator"]

[dependencies]
autd3 = { workspace = true, features = ["default"] }
autd3-gain-holo = { workspace = true, features = ["default"] }
autd3-link-ethercrab = { workspace = true, optional = true, features = ["default"] }
autd3-link-remote = { workspace = true, optional = true }
autd3-link-simulator = { workspace = true, optional = true }
autd3-link-twincat = { workspace = true, optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"], optional = true }

[[bin]]
name = "nop"
path = "src/nop.rs"
required-features = ["nop"]

[[bin]]
name = "ethercrab"
path = "src/ethercrab.rs"
required-features = ["ethercrab"]

[[bin]]
name = "remote"
path = "src/remote.rs"
required-features = ["remote"]

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "remote_twincat"
path = "src/remote_twincat.rs"
required-features = ["remote_twincat"]
