[package]
name = "autd3-examples"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
async = ["autd3/async", "autd3/link-nop", "tokio", "tokio/time"]
nop = ["autd3/link-nop"]
twincat = ["autd3-link-twincat/local"]
ethercrab = ["autd3-link-ethercrab", "tracing-subscriber"]
remote = ["autd3-link-remote/link"]
remote_server = ["autd3-link-remote/server", "autd3/link-nop", "autd3/async", "tokio", "tokio/signal", "tracing-subscriber"]
remote_twincat = ["autd3-link-twincat/remote"]
all = ["async", "twincat", "ethercrab", "remote", "remote_server", "remote_twincat"]

[dependencies]
autd3 = { workspace = true, features = ["default"] }
autd3-gain-holo = { workspace = true, features = ["default"] }
autd3-link-ethercrab = { workspace = true, optional = true, features = ["default"] }
autd3-link-remote = { workspace = true, optional = true }
autd3-link-twincat = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"], optional = true }
tokio = { workspace = true, features = ["rt", "macros"], optional = true }

[[bin]]
name = "async"
path = "src/async.rs"
required-features = ["async"]

[[bin]]
name = "nop"
path = "src/nop.rs"
required-features = ["nop"]

[[bin]]
name = "ethercrab"
path = "src/ethercrab.rs"
required-features = ["ethercrab"]

[[bin]]
name = "remote"
path = "src/remote.rs"
required-features = ["remote"]

[[bin]]
name = "remote_server"
path = "src/remote_server.rs"
required-features = ["remote_server"]

[[bin]]
name = "twincat"
path = "src/twincat.rs"
required-features = ["twincat"]

[[bin]]
name = "remote_twincat"
path = "src/remote_twincat.rs"
required-features = ["remote_twincat"]
