[package]
name = "ensure_no_std"
version = "0.0.1"
edition = "2024"

[dependencies]
autd3-core = { path = "../../autd3-core", default-features = false, features = [
    "firmware",
    "acoustics",
    "datagram",
    "common",
    "derive",
    "ethercat",
    "gain",
    "geometry",
    "link",
    "modulation",
    "utils",
    "sleep",
    "environment",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
